feat: Docker and MySQL